--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -151,6 +151,7 @@ p {
         }
     }
 
+    //? CONTACT SECTION RESPONSIVE CODE
     @media screen and (max-width: 450px) {
         .contact_us_area {
             h3 {
@@ -170,6 +171,7 @@ p {
     }
 }
 
+//? MAINBODY STYLING
 .main_body {
     min-height: 100vh;
     height: 100%;
