home page done :)

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -394,10 +394,12 @@ main section.contact_us .contact_us_area a.btn {
   padding: 1rem 2rem;
   border-radius: 0.2rem;
   background-color: #00BD9D;
-  color: #FCFFFF;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+main section.contact_us .contact_us_area a.btn p {
+  color: #FCFFFF;
 }
 main section.contact_us .contact_us_area a.btn svg {
   height: 24px;
