--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -36,7 +36,7 @@ $heading_3_t: 2.1rem; //(45px/21px)rem
 $paragraph_t: 0.7rem; //(16px/21px)rem
 
 //? BORDER RADIUS
-$border_radious: 0.2rem;
+$border_radius: 0.2rem;
 
 body {
     background-color: $color_white;
@@ -83,12 +83,15 @@ p {
     font-family: $open_sans;
     font-size: $paragraph;
     padding: 1rem 2rem;
-    border-radius: $border_radious;
+    border-radius: $border_radius;
     background-color: $color_b;
-    color: $color_f;
+    // color: $color_f;
     display: flex;
     justify-content: center;
     align-items: center;
+    p{
+        color:$color_f;
+    }
 }
 
 //? STYLING FOR CONTACT SECTION
