--- a/styles/style.scss
+++ b/styles/style.scss
@@ -29,9 +29,12 @@ header .hero_text_container {
 
 main {
     section.section {
-        margin-top: 8rem;
-        padding: 0 8rem;
-
+        margin: 8rem 8rem 0; // top | left and right | bottom
+        &:last-child{
+            margin-bottom: 8rem;
+        }
+    }
+    section.service_showcase_area{
         .service_container {
             margin-bottom: 8rem;
             display: flex;
@@ -85,4 +88,171 @@ main {
             }
         }
     }
+
+    section.call_to_action{
+        .cta_imge_area{
+            position: relative;
+            background: lightcoral;
+            padding:0;
+            height:70vh;
+            img{
+                padding: 0 !important;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+            
+            .call_to_action_textarea{
+                position: absolute;
+                top: 3%;
+                left: 50%;
+                transform: translate(-50% , 0%);
+                width: 100%;
+                color: #fff;
+                text-align: center;
+                
+                .cta_title{
+                    font-size: $heading_2;
+                }
+
+                .cta_desc{
+                    font-size: $paragraph;
+                }
+            }
+        }
+
+        .cta_footer{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: $dark25;
+            padding: 1rem 8rem; //top and bottom | left and right
+            margin: 0;
+            .cta_footer_textarea{
+                h1.cta_footer_title{
+                    font-size: $heading_4;
+                }
+            }
+
+            .btn_cta_footer{
+                a{
+                    @include make_button($color_white, $dark100);
+                    gap:.5rem;
+                    &:hover svg{
+                        transform: translate(4px);
+                    }
+                    svg{
+                        transition: all .3s ease-in-out;
+                        path{
+                            fill: $color_white;
+                        }
+                    }
+                }
+            }
+        }  
+    }
+    
+    section.glimpse_of_work{
+        h1.glimpse_title{
+            font-size:$heading_3;
+            margin-bottom: 4rem;
+            text-align:center;
+        }
+
+        .works_image_area{
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: 400px;
+            gap: 1rem;
+
+            .glimpse_img{
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                img{
+                    height:100%;
+                    width:100%;
+                    object-fit: cover;
+                    object-position: 50% 50%;
+                }
+            }
+        }
+
+        .glimpse_arrows{
+            // background: lawngreen;
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            gap: 4rem;
+            margin-top: 2rem;
+
+            .arrow a svg{
+                    height: 2rem;
+                    width: 2rem;
+                path{
+                    fill: $dark100
+                }
+            }
+        }
+    }
+
+    section.instagram_work_area {
+        h3 {
+            font-size: $heading_3;
+            text-align: center;
+        }
+
+        .insta_pic_area {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            overflow: hidden;
+            margin-top: 4rem;
+            gap: 1rem;
+
+            .insta_pic_container {
+                position: relative;
+                overflow: hidden;
+                height: 400px;
+                top: 0;
+                left: 0;
+                flex: 1;
+
+                &:hover img {
+                    transform: scale(1.05);
+                }
+
+                img {
+                    position: absolute;
+                    width: 100%;
+                    top: 0;
+                    left: 0;
+                    object-fit: cover;
+                    transition: all .5s ease-in-out;
+                }
+            }
+
+        }
+    }
+
+    section.contact_us{
+        @include make_contact_section();
+    }    
 }
+
+
+      
+
+        
+
+      
+
+  
+
+
+
+
+
+
+
+
