--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -308,8 +308,48 @@ header .hero_text_container h3 {
   padding: 0rem 8rem;
 }
 
-main section.contact_us {
-  margin: 8rem 0;
+main section.section {
+  margin: 8rem 8rem 0;
+}
+main section:last-child {
+  margin-bottom: 8rem;
+}
+main section.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 300px 300px;
+  grid-auto-flow: dense;
+  gap: 1rem;
+  grid-template-rows: masonry;
+}
+main section.gallery .img_container {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+}
+main section.gallery .img_container img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
+}
+main section.gallery .img_container img:hover {
+  filter: brightness(-1);
+}
+main section.gallery .img_container .img_title {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #FCFFFF;
+  pointer-events: none;
+}
+main section.gallery .img_container:hover .img_title {
+  opacity: 1;
 }
 main section.contact_us .contact_us_area, main section.contact_us .contact_us_area .contact_info {
   display: flex;
@@ -373,5 +413,69 @@ main section.contact_us .contact_us_area a.btn:hover svg {
   }
   main section.contact_us .contact_us_area a.btn svg {
     height: 1rem;
+  }
+}
+
+.lightbox_area {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 10111;
+  top: 0;
+  left: 0;
+  background-color: aqua;
+  display: none;
+}
+.lightbox_area .lightbox_container {
+  position: relative;
+}
+.lightbox_area .lightbox_container #lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10000;
+  background: rgba(12, 23, 28, 0.75);
+}
+
+.lightbox_area.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 900px) {
+  section.gallery {
+    grid-template-columns: repeat(3, 1fr) !important;
+  }
+}
+@media screen and (max-width: 800px) {
+  header .hero_text_container h1 {
+    font-size: 4.2rem;
+  }
+  section.section {
+    margin: 4rem 4rem 0 !important;
+  }
+  section.gallery {
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+}
+@media screen and (max-width: 450px) {
+  header .hero_text_container h1 {
+    font-size: 3rem;
+  }
+  header .hero_text_container p {
+    font-size: 0.7rem;
+  }
+  section.section {
+    margin: 4rem 2rem 0 !important;
+  }
+  section:last-child {
+    margin-bottom: 4rem !important;
+  }
+  section.gallery {
+    grid-template-columns: repeat(1, 1fr) !important;
   }
 }/*# sourceMappingURL=portfolio.css.map */
