--- a/styles/global/_navigation.scss
+++ b/styles/global/_navigation.scss
@@ -77,7 +77,7 @@ nav.nav_container {
     .social_container {
         .social_icon svg {
             margin: 0 .7rem;
-            transition: all .3s ease-in-out;
+            transition: all .3s ease-in-out !important;
             color: $dark100;
 
             &:hover {
@@ -101,7 +101,6 @@ nav.nav_container {
         height: 100%;
         width: 0%;
         margin-top: 3.5rem;
-        border-right: 1px solid $dark25;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -149,6 +148,7 @@ nav.nav_container {
 
     ul.show {
         width: 50%;
+        border-right: 1px solid $dark25;
         transition: all $animation_timing;
     }
 }
