--- a/styles/portfolio.scss
+++ b/styles/portfolio.scss
@@ -50,46 +50,41 @@ main {
         margin-bottom: 8rem;
     }
 
-    section.gallery {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-auto-rows: 300px 300px;
-        grid-auto-flow: dense;
-        gap: 1rem;
-        grid-template-rows: masonry;
+    section.fashion_pics {
+        h1.section_title {
+            margin-bottom: 2rem !important;
+            font-size: $heading_4;
+            // text-align: center;
+        }
 
-        .img_container {
-            height: 100%;
-            overflow: hidden;
-            position: relative;
-            cursor: pointer;
+        .gallery {
+            // display: grid;
+            // grid-template-columns: repeat(4, 1fr);
+            // grid-auto-rows: 300px 300px;
+            // gap: 1rem;
+            columns: 4 300px;
 
-            img {
-                width: 100%;
+            .img_container {
                 height: 100%;
-                object-fit: cover;
-                object-position: 50% 50%;
+                overflow: hidden;
+                position: relative;
+                cursor: pointer;
+                margin-bottom: .8rem;
 
-                &:hover {
-                    filter: brightness(-1);
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: 50% 0%;
+
+                    &:hover {
+                        filter: brightness(-1);
+                    }
                 }
-            }
-
-            .img_title {
-                opacity: 0;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                color: $color_white;
-                pointer-events: none;
-            }
-
-            &:hover .img_title {
-                opacity: 1;
             }
         }
     }
+
 
     section.contact_us {
         @include make_contact_section();
@@ -110,10 +105,20 @@ main {
     display: none;
 
     .ld_img {
-        height: 500px;
-        width: 60%;
+        height: 600px;
         object-fit: cover;
         object-position: 50% 50%;
+        animation: show_image .5s ease-in-out forwards;
+    }
+}
+
+@keyframes show_image {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 100%;
     }
 }
 
@@ -161,13 +166,15 @@ main {
 
 //? RESPONSIVE STYLING 
 @media screen and (max-width: 900px) {
-    section.gallery {
-        grid-template-columns: repeat(2, 1fr) !important;
+    section.fashion_pics {
+        .gallery {
+            grid-template-columns: repeat(2, 1fr) !important;
+        }
     }
 
     #lightBox {
         .ld_img {
-            width: 90%;
+            height: 500px;
         }
     }
 
@@ -197,14 +204,9 @@ main {
         margin-bottom: 4rem !important;
     }
 
-    section.gallery {
-        grid-template-columns: repeat(2, 1fr) !important;
-    }
-
     #lightBox {
         .ld_img {
-            width: 100%;
-            height: auto;
+            height: 500px;
         }
     }
 
@@ -232,8 +234,17 @@ main {
         margin-bottom: 4rem !important;
     }
 
-    section.gallery {
-        grid-template-columns: repeat(1, 1fr) !important;
+    section.fashion_pics {
+        .gallery {
+            grid-template-columns: repeat(1, 1fr) !important;
+        }
+    }
+
+    #lightBox {
+        .ld_img {
+            height: auto;
+            width: 100%;
+        }
     }
 
     .lightbox_control {
